--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- FontAwesomeの読み込み -->
     <script src="https://kit.fontawesome.com/163d856b47.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <!-- CSSファイルの読み込み -->
     <link rel="stylesheet" href="style.css" />
     <title>CARAVAN</title>
@@ -29,157 +30,220 @@
     </header>
 
     <!-- navigation -->
-    <nav>
-      <ul class="nav-list">
-        <li class="nav-list-item">
-          <a href="index.html">Home</a>
-        </li>
-        <li class="nav-list-item">About</li>
-        <li class="nav-list-item">Topic</li>
-      </ul>
+    <nav class="navbar navbar-expand-sm navbar-light bg-light mt-3 mb-3">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav4" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-center">
+          <ul class="navbar-nav">
+              <li class="nav-item">
+                  <a class="nav-link" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#">Topic</a>
+              </li>
+          </ul>
+      </div>
     </nav>
 
     <!-- main-visual用のdiv -->
-    <div class="main-visual">
-      <div class="main-visual-content">
-        <p class="main-visual-text">
-          The world is a book<br />
-          and those who do not travel<br />
-          read only one page.
-        </p>
-        <p class="main-visual-name">
-          St. Augustine
-        </p>
+    <div class="container-fluid main-visual">
+      <div class="row">
+        <div class="col-4 d-flex align-items-center justify-content-center main-visual-content">
+          <!-- <div class="cover-text text-center"> -->
+				    <p class="text-white">
+              The world is a book<br />
+              and those who do not travel<br />
+              read only one page.<br />
+              <br />
+              St. Augustine
+            </p>
+        </div>
       </div>
     </div>
 
-    <!-- main用のdiv -->
+    <!-- テストレイアウト -->
     <main>
-      <section class="blog">
-        <h2 class="blog-heading">Recent Blogs</h2>
-        <div class="blog-box">
-          <div class="blog-item">
-            <img class="blog-image" src="img/forest.jpg" />
-            <section class="blog-text">
-              <h3 class="blog-text-heading">
-                <a href="single.html">
-                  Hopeful lessons from<br />
-                  the battle to save<br />
-                  rainforests
-                </a>
-              </h3>
-              <p class="blog-date">June 19, 2017</p>
-              <span class="category">Nature</span>
+      <div class="container-fluid pt-3">
+        <div class="row">
+          <div class="col-6 offset-2">
+            <h2 class="text-center blog-heading">Recent Blogs</h2>
+            <div class="container-fluid pt-2">
+              <div class="row pt-2 pb-2">
+                <div class="d-flex flex-row">
+                  <div class="p-2 bd-highlight">
+                    <img class="blog-image" src="img/forest.jpg" />
+                  </div>
+                  <section class="blog">
+                  <div class="p-2 bd-highlight">
+                    <h3 class="blog-text-heading">
+                      <a href="single.html">
+                        Hopeful lessons from<br />
+                        the battle to save<br />
+                        rainforests
+                      </a>
+                    </h3>
+                    <p class="blog-date">June 19, 2017</p>
+                    <span class="category">Nature</span>
+                  </div>
+                </section>
+                </div>
+              </div>
+              <div class="container-fluid pt-2">
+                <div class="row pt-2 pb-2">
+                  <div class="d-flex flex-row">
+                    <div class="p-2 bd-highlight">
+                      <img class="blog-image" src="img/desert.jpg" />
+                    </div>
+                    <section class="blog">
+                    <div class="p-2 bd-highlight">
+                      <h3 class="blog-text-heading">
+                        <a href="single.html">
+                          How to fight<br />
+                          desertification and<br />
+                          reverse climate change
+                        </a>
+                      </h3>
+                      <p class="blog-date">June 17, 2017</p>
+                      <span class="category">Nature</span>
+                    </div>
+                  </section>
+                  </div>
+                </div>
+              </div>
+              <div class="container-fluid pt-2">
+                <div class="row pt-2 pb-2">
+                  <div class="d-flex flex-row">
+                    <div class="p-2 bd-highlight">
+                      <img class="blog-image" src="img/sunset.jpg" />
+                    </div>
+                    <section class="blog">
+                    <div class="p-2 bd-highlight">
+                      <h3 class="blog-text-heading">
+                        <a href="single.html">
+                          Why I'm rowing<br />
+                          across the Pacific
+                        </a>
+                      </h3>
+                      <p class="blog-date">June 16, 2017</p>
+                      <span class="category">Adventure</span>
+                    </div>
+                  </section>
+                  </div>
+                </div>
+              </div>
+              <div class="container-fluid pt-2">
+                <div class="row pt-2 pb-2">
+                  <div class="d-flex flex-row">
+                    <div class="p-2 bd-highlight">
+                      <img class="blog-image" src="img/italy.jpg" />
+                    </div>
+                    <section class="blog">
+                    <div class="p-2 bd-highlight">
+                      <h3 class="blog-text-heading">
+                        <a href="single.html">
+                          Unseen footage,<br />
+                          untamed nature
+                        </a>
+                      </h3>
+                      <p class="blog-date">June 15, 2017</p>
+                      <span class="category">Nature</span>
+                    </div>
+                  </section>
+                  </div>
+                </div>
+              </div>
+              <div class="container-fluid pt-2">
+                <div class="row pt-2 pb-2">
+                  <div class="d-flex flex-row">
+                    <div class="p-2 bd-highlight">
+                      <img class="blog-image" src="img/asia.jpg" />
+                    </div>
+                    <section class="blog">
+                    <div class="p-2 bd-highlight">
+                      <h3 class="blog-text-heading">
+                        <a href="single.html">
+                          The case for<br />
+                          engineering our food
+                        </a>
+                      </h3>
+                      <p class="blog-date">June 14, 2017</p>
+                      <span class="category">Culture</span>
+                    </div>
+                  </section>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        <div class="col-3">
+          <div class="row">
+            <section>
+              <h2 class="popular-heading common-heading">Popular</h2>
+              <div class="sidebar-contents">
+                <p class="popular-text">
+                  To solve old problems,<br />study new species
+                </p>
+                <p class="popular-text">
+                  Why Earth may someday<br />look like Mars
+                </p>
+                <p class="popular-text">
+                  What will humans look<br />like in 100 years?
+                </p>
+                <p class="popular-text">
+                  How to grow a forest<br />in your backyard
+                </p>
+                <p class="popular-text">
+                  How humans could evolve<br />to survive in space
+                </p>
+              </div>
             </section>
           </div>
-          <div class="blog-item">
-            <img class="blog-image" src="img/desert.jpg" />
-            <section class="blog-text">
-              <h3 class="blog-text-heading">
-                <a href="single.html">
-                  How to fight<br />
-                  desertification and<br />
-                  reverse climate change
-                </a>
-              </h3>
-              <p class="blog-date">June 17, 2017</p>
-              <span class="category">Nature</span>
+          <div class="row">
+            <section class="instagram">
+              <h2 class="instagram-heading common-heading">Instagram</h2>
+              <div class="sidebar-contents">
+                <div class="instagram-box"></div>
+                <div class="instagram-box"></div>
+                <div class="instagram-box"></div>
+                <div class="instagram-box"></div>
+                <div class="instagram-box"></div>
+                <div class="instagram-box"></div>
+              </div>
             </section>
           </div>
-          <div class="blog-item">
-            <img class="blog-image" src="img/sunset.jpg" />
-            <section class="blog-text">
-              <h3 class="blog-text-heading">
-                <a href="single.html">
-                  Why I'm rowing<br />
-                  across the Pacific
-                </a>
-              </h3>
-              <p class="blog-date">June 16, 2017</p>
-              <span class="category">Adventure</span>
-            </section>
-          </div>
-          <div class="blog-item">
-            <img class="blog-image" src="img/italy.jpg" />
-            <section class="blog-text">
-              <h3 class="blog-text-heading">
-                <a href="single.html">
-                  Unseen footage,<br />
-                  untamed nature
-                </a>
-              </h3>
-              <p class="blog-date">June 15, 2017</p>
-              <span class="category">Nature</span>
-            </section>
-          </div>
-          <div class="blog-item">
-            <img class="blog-image" src="img/asia.jpg" />
-            <section class="blog-text">
-              <h3 class="blog-text-heading">
-                <a href="single.html">
-                  The case for<br />
-                  engineering our food
-                </a>
-              </h3>
-              <p class="blog-date">June 14, 2017</p>
-              <span class="category">Culture</span>
+          <div class="row">
+            <section class="categories">
+              <h2 class="categories-heading common-heading">Categories</h2>
+              <div class="sidebar-contents">
+                <p class="categories-text">Technology(15)</p>
+                <p class="categories-text">Business(23)</p>
+                <p class="categories-text">Entertainment(12)</p>
+                <p class="categories-text">Nature(32)</p>
+                <p class="categories-text">Education(9)</p>
+                <p class="categories-text">Adventure(23)</p>
+                <p class="categories-text">Communication(14)</p>
+              </div>
             </section>
           </div>
         </div>
-        <div class="pagination">
-          <p><<</p>
-          <p><</p>
-          <p>1</p>
-          <p>2</p>
-          <p>3</p>
-          <p>></p>
-          <p>>></p>
+      </div>
+      <div class="container-fluid">
+        <div class="row center-block mb-5">
+          <div class="col-4 offset-4 pagination">
+            <p>&laquo;</p>
+            <p>&lt;</p>
+            <p>1</p>
+            <p>2</p>
+            <p>3</p>
+            <p>&gt;</p>
+            <p>&raquo;</p>
+          </div>
         </div>
-      </section>
-      <div class="sidebar">
-        <section class="popular">
-          <h2 class="popular-heading common-heading">Popular</h2>
-          <div class="sidebar-contents">
-            <p class="popular-text">
-              To solve old problems,<br />study new species
-            </p>
-            <p class="popular-text">
-              Why Earth may someday<br />look like Mars
-            </p>
-            <p class="popular-text">
-              What will humans look<br />like in 100 years?
-            </p>
-            <p class="popular-text">
-              How to grow a forest<br />in your backyard
-            </p>
-            <p class="popular-text">
-              How humans could evolve<br />to survive in space
-            </p>
-          </div>
-        </section>
-        <section class="instagram">
-          <h2 class="instagram-heading common-heading">Instagram</h2>
-          <div class="sidebar-contents">
-            <div class="instagram-box"></div>
-            <div class="instagram-box"></div>
-            <div class="instagram-box"></div>
-            <div class="instagram-box"></div>
-            <div class="instagram-box"></div>
-            <div class="instagram-box"></div>
-          </div>
-        </section>
-        <section class="categories">
-          <h2 class="categories-heading common-heading">Categories</h2>
-          <div class="sidebar-contents">
-            <p class="categories-text">Technology(15)</p>
-            <p class="categories-text">Business(23)</p>
-            <p class="categories-text">Entertainment(12)</p>
-            <p class="categories-text">Nature(32)</p>
-            <p class="categories-text">Education(9)</p>
-            <p class="categories-text">Adventure(23)</p>
-            <p class="categories-text">Communication(14)</p>
-          </div>
-        </section>
+      </div>
       </div>
     </main>
 
@@ -187,5 +251,10 @@
     <footer>
       <p class="footer-text">© All rights reserved by Infratop.Inc.</p>
     </footer>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
 </html>
